# mobile-sdk

./:  jitpack.yml   .clangd  .gitignore  .jitpack.yml  BUILDING.md  CHANGELOG.md  CLAUDE.md  PMTILES_IMPLEMENTATION.md  README.md
.github/workflows/: build.yml  build_css2xml.yml
all/modules/components/: Options.i  TerrainOptions.i
all/modules/datasources/: ContourTileDataSource.i  MultiTileDataSource.i  PMTilesTileDataSource.i  TileDataSource.i
all/modules/datasources/components/: TileData.i
all/modules/layers/: CompositeVectorTileLayer.i  CustomRasterTileLayer.i  HillshadeRasterTileLayer.i  TileLayer.i
all/modules/renderers/: MapRenderer.i  PostProcessEffect.i
all/modules/routing/: ValhallaOnlineRoutingService.i
all/modules/vectortiles/: MBVectorTileDecoder.i
all/native/components/: ElevationProvider.h  Options.cpp  Options.h  TerrainOptions.cpp  TerrainOptions.h
all/native/datasources/: AssetTileDataSource.cpp  BitmapOverlayRasterTileDataSource.cpp  CacheTileDataSource.cpp  CacheTileDataSource.h  ContourTileDataSource.cpp  ContourTileDataSource.h  DynamicMergedMBVTTileDataSource.cpp  DynamicMergedMBVTTileDataSource.h  GDALRasterTileDataSource.cpp  HTTPTileDataSource.cpp  HTTPTileDataSource.h  MBTilesTileDataSource.cpp  MapTilerOnlineTileDataSource.cpp  MergedMBVTTileDataSource.cpp  MultiTileDataSource.cpp  OnlineNMLModelLODTreeDataSource.cpp  PMTilesTileDataSource.cpp  PMTilesTileDataSource.h  PersistentCacheTileDataSource.cpp  PersistentCacheTileDataSource.h  TileDataSource.cpp  TileDataSource.h
all/native/geocoding/: GeocodingRequest.cpp  MapBoxOnlineGeocodingService.cpp  MapBoxOnlineReverseGeocodingService.cpp  PeliasOnlineGeocodingService.cpp  PeliasOnlineReverseGeocodingService.cpp  ReverseGeocodingRequest.cpp  TomTomOnlineGeocodingService.cpp  TomTomOnlineReverseGeocodingService.cpp
all/native/graphics/: Bitmap.cpp  ViewState.cpp  ViewState.h
all/native/layers/: CompositeVectorTileLayer.cpp  CompositeVectorTileLayer.h  CustomRasterTileLayer.cpp  CustomRasterTileLayer.h  HillshadeRasterTileLayer.cpp  HillshadeRasterTileLayer.h  Layer.h  RasterTileLayer.cpp  RasterTileLayer.h  TileLayer.cpp  TileLayer.h  VectorLayer.cpp  VectorLayer.h
all/native/network/: HTTPClient.cpp  HTTPClientPionImpl.cpp
all/native/packagemanager/: PackageManager.cpp
all/native/rastertiles/: ElevationDecoder.h  MapBoxElevationDataDecoder.cpp  MapBoxElevationDataDecoder.h  TerrariumElevationDataDecoder.cpp  TerrariumElevationDataDecoder.h
all/native/renderers/: BillboardRenderer.cpp  GeometryCollectionRenderer.cpp  GeometryCollectionRenderer.h  LineRenderer.cpp  LineRenderer.h  MapRenderer.cpp  MapRenderer.h  PointRenderer.cpp  PointRenderer.h  PolygonRenderer.cpp  PolygonRenderer.h  PostProcessEffect.cpp  PostProcessEffect.h  TerrainRenderer.cpp  TerrainRenderer.h  TileRenderer.cpp  TileRenderer.h
all/native/routing/: MultiValhallaOfflineRoutingService.cpp  PackageManagerValhallaRoutingService.cpp  RouteMatchingRequest.cpp  RoutingRequest.cpp  ValhallaOfflineRoutingService.cpp  ValhallaOnlineRoutingService.cpp  ValhallaOnlineRoutingService.h
all/native/terrain/: ElevationManager.cpp  ElevationManager.h  ElevationTileGrid.cpp  ElevationTileGrid.h  TerrainProjectionSurface.cpp  TerrainProjectionSurface.h  TerrainTileTransformer.cpp  TerrainTileTransformer.h
all/native/ui/: TouchHandler.cpp  TouchHandler.h
all/native/utils/: CompressionUtils.h  Const.cpp  NetworkUtils.cpp
all/native/vectortiles/: MBVectorTileDecoder.cpp  MBVectorTileDecoder.h  TorqueTileDecoder.cpp
docs/: TERRAIN_GPU_DRAPING_PLAN.md  TERRAIN_PHASE_D_PLAN.md  composite-vector-tile-layer-config.md  composite-vector-tile-layer-plan.md
docs/datasources/: PMTilesTileDataSource.md
ios/objc/: CartoMobileSDK.h
ios/objc/ui/: MapView.mm
routing-lib/android/src/main/cpp/: CMakeLists.txt  HTTPClientAndroidImpl.cpp  HTTPClientAndroidImpl.h  ValhallaRoutingJNI.cpp
routing-lib/ios/: HTTPClientIOSImpl.mm  NTValhallaRoutingService.h  NTValhallaRoutingService.mm
routing-lib/ios/examples/: URLSessionExample.swift
routing-lib/native/core/: Constants.h  EPSG3857.cpp  EPSG3857.h  EPSG4326.cpp  EPSG4326.h  MapBounds.cpp  MapBounds.h  MapPos.cpp  MapPos.h  MapVec.cpp  MapVec.h  Projection.cpp  Projection.h  Variant.cpp  Variant.h
routing-lib/native/datasource/: IDataSource.h  MBTilesDataSource.cpp  MBTilesDataSource.h  MultiDataSource.cpp  MultiDataSource.h
routing-lib/native/exceptions/: Exceptions.h
routing-lib/native/log/: Log.cpp  Log.h
routing-lib/native/network/: HTTPClient.cpp  HTTPClient.h  HTTPClientAndroidImpl.h  HTTPClientIOSImpl.h
routing-lib/native/routing/: RouteMatchingEdge.cpp  RouteMatchingEdge.h  RouteMatchingPoint.cpp  RouteMatchingPoint.h  RouteMatchingRequest.cpp  RouteMatchingRequest.h  RouteMatchingResult.cpp  RouteMatchingResult.h  RoutingAction.h  RoutingInstruction.cpp  RoutingInstruction.h  RoutingRequest.cpp  RoutingRequest.h  RoutingResult.cpp  RoutingResult.h  ValhallaOnlineRoutingService.cpp  ValhallaOnlineRoutingService.h  ValhallaRoutingService.cpp  ValhallaRoutingService.h
routing-lib/native/utils/: CompressionUtils.h  StringUtils.h
scripts/: build-android.py  build-ios.py  build-routing-android.py  build-routing-ios.py  build-winphone.py  build-xamarin.py  generate-jitpack.py  generate-swiftpackage.py  swigpp-java.py  swigpp-objc.py  validate-vt-shaders.py
scripts/android/: build.gradle  carto-mobile-sdk.pom.template  publish.gradle
scripts/android-dev/: build.gradle  settings.gradle
scripts/android-dev/app/: build.gradle
scripts/android-dev/carto_mobile_sdk/: build.gradle
scripts/android-dev/valhalla_routing/: build.gradle
scripts/android-jitpack/: jitpack.yml.template  settings.gradle
scripts/android-jitpack/routing/: build.gradle
scripts/ios-cocoapod/: podspec.template
scripts/ios-dev/examples/: AFNetworkingExample.m
scripts/ios-swiftpackage/: Package.swift.template
scripts/routing/: CMakeLists.txt
scripts/routing-android/: build.gradle  settings.gradle
scripts/routing-ios/: ValhallaRouting.h
(+32 files in other folders)
